@@ -6,7 +6,8 @@ from tests.support import is_instance, unittest2, X, SomeClass
 
 from mock import (
     Mock, MagicMock, NonCallableMagicMock,
-    NonCallableMock, patch, create_autospec
+    NonCallableMock, patch, create_autospec,
+    CallableMixin
 )
 
 """
@@ -19,13 +20,22 @@ Removing these would be pointless as fetching them would create a mock
 (attribute) that could be called without error.
 """
 
+# Used to test patching out None with an explicit spec
+Thing = None
+
 
 class TestCallable(unittest2.TestCase):
+
+    def assertNotCallable(self, mock):
+        self.assertTrue(is_instance(mock, NonCallableMagicMock))
+        self.assertFalse(is_instance(mock, CallableMixin))
+
 
     def test_non_callable(self):
         for mock in NonCallableMagicMock(), NonCallableMock():
             self.assertRaises(TypeError, mock)
             self.assertFalse(hasattr(mock, '__call__'))
+            self.assertIn(mock.__class__.__name__, repr(mock))
 
 
     def test_attributes(self):
@@ -58,7 +68,19 @@ class TestCallable(unittest2.TestCase):
         instance = mock()
         mock.assert_called_once_with()
 
-        self.assertTrue(is_instance(instance, NonCallableMagicMock))
+        self.assertNotCallable(instance)
+        self.assertRaises(TypeError, instance)
+
+
+    def test_patch_spec_set(self):
+        patcher = patch('%s.X' % __name__, spec_set=True)
+        mock = patcher.start()
+        self.addCleanup(patcher.stop)
+
+        instance = mock()
+        mock.assert_called_once_with()
+
+        self.assertNotCallable(instance)
         self.assertRaises(TypeError, instance)
 
 
@@ -67,7 +89,16 @@ class TestCallable(unittest2.TestCase):
         mock = patcher.start()
         self.addCleanup(patcher.stop)
 
-        self.assertTrue(is_instance(mock, NonCallableMagicMock))
+        self.assertNotCallable(mock)
+        self.assertRaises(TypeError, mock)
+
+
+    def test_patch_spec_set_instance(self):
+        patcher = patch('%s.X' % __name__, spec_set=X())
+        mock = patcher.start()
+        self.addCleanup(patcher.stop)
+
+        self.assertNotCallable(mock)
         self.assertRaises(TypeError, mock)
 
 
@@ -89,17 +120,30 @@ class TestCallable(unittest2.TestCase):
         class OldStyleSub(OldStyle):
             pass
 
-        for Klass in CallableX, Sub, Multi, OldStyle, OldStyleSub:
-            patcher = patch('%s.X' % __name__, spec=Klass)
-            mock = patcher.start()
-            self.addCleanup(patcher.stop)
+        for arg in 'spec', 'spec_set':
+            for Klass in CallableX, Sub, Multi, OldStyle, OldStyleSub:
+                patcher = patch('%s.X' % __name__, **{arg: Klass})
+                mock = patcher.start()
 
-            instance = mock()
-            mock.assert_called_once_with()
+                try:
+                    instance = mock()
+                    mock.assert_called_once_with()
 
-            self.assertTrue(is_instance(instance, MagicMock))
-            instance()
-            instance.assert_called_once_with()
+                    self.assertTrue(is_instance(instance, MagicMock))
+                    # inherited spec
+                    self.assertRaises(AttributeError, getattr, instance,
+                                      'foobarbaz')
+
+                    result = instance()
+                    # instance is callable, result has no spec
+                    instance.assert_called_once_with()
+
+                    result(3, 2, 1)
+                    result.assert_called_once_with(3, 2, 1)
+                    result.foo(3, 2, 1)
+                    result.foo.assert_called_once_with(3, 2, 1)
+                finally:
+                    patcher.stop()
 
 
     def test_create_autopsec(self):
